# ct_dev-agent_delegation

./: .gitignore  ABSCHLUSSBERICHT_CAP_FIELDS.md  ABSCHLUSSBERICHT_opencode_phase1.md  ABSCHLUSSBERICHT_test_suite.md  AGENTS.md  AGENT_ORCHESTRATOR_FIXES.md  AKTIONSPLAN_PHASE3.md  CAP_STRUCTURE_SUMMARY.md  CHANGELOG.md  CODERABBIT_FINDINGS.md  CODERABBIT_REVIEW3.md  CODERABBIT_SUMMARY.md  CODE_ANALYSIS_REPORT.md  CODE_ANALYSIS_SUMMARY.md  CODE_REVIEW.md  COMPLIANCE.md  FINAL_REPORT.md  IMPLEMENTATION_CAP_FIELDS.md  IMPLEMENTIERUNGSPLAN.md  INTEGRATION_TEST_REPORT.md  NEXT_STEPS.md  OPENCODE_API_ANALYSIS.md  OPENCODE_API_SUCCESS.md  PHASE_A_ABSCHLUSSBERICHT.md  PHILOSOPHICAL_REVIEW.md  PLANNING_SUMMARY_CAP_FIELDS.md  PLANUNG.md  PLANUNG_asyncio_fix.md  PLANUNG_test_suite_reparatur.md  PLAN_CAP_DELEGATION_FIELDS.md  PLAN_PHASE1_FIX.md  PROCESS_MANAGEMENT_SUMMARY.md  PR_BODY.md  QUICKFIX_agent_orchestrator_enum_handling.md  README.md  RUN_SERVER.sh  SCOPE_DEVIATION_INTEGRATION_REPORT.md  SERVICE_LAYER_ADAPTATION.md  STATUS_REPORT.md  TASK_MANAGEMENT_UPDATE.md  (+13 more)
.serena/: project.yml
docs/: LOGFIRE_SETUP.md  PROCESS_MANAGEMENT.md  PROCESS_MANAGEMENT_IMPLEMENTATION.md  SCOPE_DEVIATION_INTEGRATION_VERIFICATION.md  api-validation-report.md  architecture-v2.md  architecture.md  design-decisions.md  opencode-api-schema.json  refactoring-plan.md
test_python_project/: main.py
tests/: test_basic.py  test_integration_v2.py  test_mcp_tools_phase3.py  test_mcp_tools_v2.py  test_process_manager.py  test_scope_deviation.py  test_session_models.py  test_session_service.py
(+58 files in other folders)
